--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -17,6 +17,8 @@
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
-    "rimraf": "2.2.8"
+    "rimraf": "2.2.8",
+    "typescript": "2.0.3",
+    "typings": "1.4.0"
   }
 }  
