--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -10,6 +10,10 @@
     "sweetalert2": "5.2.1"
   },
   "devDependencies": {
+    "angular2": "2.0.0-beta.17",
+    "systemjs": "0.19.39",
+    "es6-shim": "^0.33.3",
+    "rxjs": "5.0.0-beta.2",
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
