--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -16,7 +16,8 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Angular2.Mvc.Core": "1.0.0-*",
     "Microsoft.AspNetCore.Cors": "1.0.0",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "NLog.Extensions.Logging": "1.0.0-rtm-alpha4"
   },
 
   "tools": {
