--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "3.1.0",
+    "jsnlog": "^2.20.1",
     "reflect-metadata": "^0.1.8",
     "zone.js": "^0.6.25"
   }
