--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.0",
-      "type": "platform"
-    },
+    //"Microsoft.NETCore.App": {
+    //  "version": "1.0.0",
+    //  "type": "platform"
+    //},
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
@@ -16,8 +16,8 @@
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "es6-shim.TypeScript.DefinitelyTyped": "0.8.1",
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
-    "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "System.Data.SqlClient": "4.1.0"
+    "System.Data.SqlClient": "4.1.0",
+    "JSNLog.AspNetCore": "2.20.0"
   },
 
   "tools": {
@@ -25,11 +25,24 @@
   },
 
   "frameworks": {
+    "net452": {
+      "dependencies": {
+        "Newtonsoft.Json": "9.0.1"
+      }
+    },
     "netcoreapp1.0": {
       "imports": [
         "dotnet5.6",
+        "dnxcore50",
         "portable-net45+win8"
-      ]
+      ],
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "version": "1.0.0",
+          "type": "platform"
+        },
+        "Newtonsoft.Json": "9.0.1"
+      }
     }
   },
 
