--- a/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
@@ -3,23 +3,17 @@
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview3-final"
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1"
   },
 
   "tools": {
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.0.0-preview3-final",
-      "imports": [
-        "portable-net45+win8+dnxcore50",
-        "portable-net45+win8"
-      ]
-    }
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
     "net452": {
       "dependencies": {
+        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
       }
     },
     "netstandard1.6": {
