--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -17,7 +17,8 @@
     "Angular2.Mvc.Core": "1.0.0-*",
     "Microsoft.AspNetCore.Cors": "1.0.0",
     "Newtonsoft.Json": "9.0.1",
-    "NLog.Extensions.Logging": "1.0.0-rtm-alpha4"
+    "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
+    "Angular2.Mvc.DAL": "1.0.0-*"
   },
 
   "tools": {
