--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -4,24 +4,31 @@
     //  "version": "1.0.0",
     //  "type": "platform"
     //},
+    "Microsoft.DotNet.Cli.Utils": "1.0.0-preview2-003121",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
-    "Microsoft.Extensions.Logging": "1.0.0",
-    "Microsoft.Extensions.Logging.Console": "1.0.0",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "Microsoft.Extensions.Logging.Filter": "1.0.0",
+    "Microsoft.Extensions.Logging": "1.1.0-preview1-final",
+    "Microsoft.Extensions.Logging.Console": "1.1.0-preview1-final",
+    "Microsoft.Extensions.Logging.Debug": "1.1.0-preview1-final",
+    "Microsoft.Extensions.Logging.Filter": "1.1.0-preview1-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "es6-shim.TypeScript.DefinitelyTyped": "0.8.1",
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
-    "System.Data.SqlClient": "4.1.0",
-    "JSNLog.AspNetCore": "2.20.0"
+    "System.Data.SqlClient": "4.3.0-preview1-24530-04",
+    "JSNLog.AspNetCore": "2.20.0",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0-preview1-final",
+    "Microsoft.EntityFrameworkCore": "1.1.0-preview1-final",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-preview1-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.1"
   },
 
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
@@ -37,6 +44,8 @@
         "portable-net45+win8"
       ],
       "dependencies": {
+        "Angular2.Mvc.Core": "1.0.0-*",
+        "Angular2.Mvc.DAL": "1.0.0-*",
         "Microsoft.NETCore.App": {
           "version": "1.0.0",
           "type": "platform"
