--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -19,9 +19,10 @@
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
     "System.Data.SqlClient": "4.3.0-preview1-24530-04",
     "JSNLog.AspNetCore": "2.20.0",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0-preview1-final",
-    "Microsoft.EntityFrameworkCore": "1.1.0-preview1-final",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-preview1-final",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore": "1.0.1",
+    "Microsoft.EntityFrameworkCore.Relational": "1.0.1",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1"
   },
