--- a/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
@@ -3,6 +3,11 @@
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+    "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
+    "Newtonsoft.Json": "9.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1"
   },
 
@@ -13,7 +18,6 @@
   "frameworks": {
     "net452": {
       "dependencies": {
-        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
       }
     },
     "netstandard1.6": {
