--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -12,6 +12,9 @@
     "Microsoft.Extensions.Logging.Console": "1.1.0-preview1-final",
     "Microsoft.Extensions.Logging.Debug": "1.1.0-preview1-final",
     "Microsoft.Extensions.Logging.Filter": "1.1.0-preview1-final",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
@@ -24,7 +27,8 @@
     "Microsoft.EntityFrameworkCore.Relational": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "Microsoft.NETCore.Portable.Compatibility": "1.0.1"
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
+    "Angular2.Mvc.DAL": "1.0.0-*"
   },
 
   "tools": {
@@ -46,7 +50,6 @@
       ],
       "dependencies": {
         "Angular2.Mvc.Core": "1.0.0-*",
-        "Angular2.Mvc.DAL": "1.0.0-*",
         "Microsoft.NETCore.App": {
           "version": "1.0.0",
           "type": "platform"
