Remove logger from Angular2.Mvc.DAL.Migrations.Configuration cus it will cause an error on dotnet ef command.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "Data": {
-    //"DefaultConnection": {
-    //  "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    //},
+    "DefaultConnection": {
+      "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
     "LogConnStr": {
       "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
