Put NLog in Web api.

--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/NLog.config
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/NLog.config
@@ -1,10 +1,10 @@
-﻿﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="true"
-      internalLogLevel="On" internalLogFile="c:\temp\nlog-internal.log" >
+      internalLogLevel="Error" internalLogFile="c:\temp\nlog-internal.log" >
 
 
 
@@ -16,7 +16,7 @@
   <!--[變數] LOG位置 -->
   <variable name="LogTxtLocation" value="${basedir}/App_Data/Logs/${shortdate}/${logger}.log"/>
   <variable name="LogTxtLocationFatal" value="${basedir}/App_Data/Logs/${shortdate}/FatalFile.log"/>
-  <variable name="ProjectName" value="Angular.Mvc"/>
+  <variable name="ProjectName" value="Angular.Mvc.Webapi"/>
 
 
   <targets>
@@ -27,6 +27,47 @@
     <target name="FileFatal" xsi:type="File" fileName="${LogTxtLocationFatal}" layout="${LayoutFatal}"/>
     <!--事件-->
     <!--<target name="Event" xsi:type="EventLog" source="${ProjectName}" log="Application" layout="${LayoutEvent}" />-->
+    <!--即時顯示-->
+    <!--<target name="Sentinel" xsi:type="NLogViewer" address="udp://127.0.0.1:3333"/>-->
+    <!--資料庫-->
+    <target name="LogDatabase" xsi:type="Database" >
+      <connectionString>
+        Data Source=.;Initial Catalog=JB;Integrated Security=True;
+      </connectionString>
+      <commandText>
+        INSERT INTO AspnetCoreLog (
+        Application, Logged, Level, Message,
+        Logger, CallSite, Exception
+        ) values (
+        @Application, @Logged, @Level, @Message,
+        @Logger, @Callsite, @Exception
+        );
+      </commandText>
+
+      <parameter name="@application" layout="${ProjectName}" />
+      <parameter name="@logged" layout="${date}" />
+      <parameter name="@level" layout="${level}" />
+      <parameter name="@message" layout="${message}" />
+      <parameter name="@logger" layout="${logger}" />
+      <parameter name="@callSite" layout="${callsite:filename=true}" />
+      <parameter name="@exception" layout="${exception:tostring}" />
+    </target>
+    <!--
+  CREATE TABLE [dbo].[AspnetCoreLog] (
+      [Id] [int] IDENTITY(1,1) NOT NULL,
+      [Application] [nvarchar](50) NOT NULL,
+      [Logged] [datetime] NOT NULL,
+      [Level] [nvarchar](50) NOT NULL,
+      [Message] [nvarchar](max) NOT NULL,
+      [Logger] [nvarchar](250) NULL,
+      [Callsite] [nvarchar](max) NULL,
+      [Exception] [nvarchar](max) NULL,
+    CONSTRAINT [PK_dbo.Log] PRIMARY KEY CLUSTERED ([Id] ASC)
+      WITH (PAD_INDEX  = OFF, STATISTICS_NORECOMPUTE  = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS  = ON, ALLOW_PAGE_LOCKS  = ON) ON [PRIMARY]
+  ) ON [PRIMARY]
+-->
+
+
   </targets>
 
   <rules>
@@ -40,7 +81,8 @@
     Fatal：致命，用來記錄會讓系統無法執行的錯誤，例如資料庫無法連線、重要資料損毀等。 -->
     <!--<logger name="*" levels="Trace, Debug, Info, Warn, Error, Fatal" writeTo="FmsDb,Viewer" />-->
     <logger name="*" levels="Trace, Debug, Info, Warn"               writeTo="File" />
-    <logger name="*" levels="Error, Fatal"                           writeTo="FileFatal" />
+    <logger name="*" levels="Error, Fatal"                           writeTo="FileFatal,LogDatabase" />
+    <!--<logger name="*" levels="Trace, Debug, Info, Warn, Error, Fatal" writeTo="Sentinel" />-->
     <!--<logger name="*" levels="Error, Fatal" writeTo="Event" />-->
   </rules>
 
