--- a/Angular2.Mvc/src/Angular2.Mvc.Website/NLog.config
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/NLog.config
@@ -16,7 +16,7 @@
   <!--[變數] LOG位置 -->
   <variable name="LogTxtLocation" value="${basedir}/App_Data/Logs/${shortdate}/${logger}.log"/>
   <variable name="LogTxtLocationFatal" value="${basedir}/App_Data/Logs/${shortdate}/FatalFile.log"/>
-  <variable name="ProjectName" value="Angular.Mvc"/>
+  <variable name="ProjectName" value="Angular.Mvc/Website"/>
 
 
   <targets>
@@ -44,7 +44,7 @@
               );
       </commandText>
      
-      <parameter name="@application" layout="AspNetCoreNlog" />
+      <parameter name="@application" layout="${ProjectName}" />
           <parameter name="@logged" layout="${date}" />
           <parameter name="@level" layout="${level}" />
           <parameter name="@message" layout="${message}" />
