--- a/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.DAL/project.json
@@ -8,7 +8,7 @@
   },
 
   "tools": {
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+    //"Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
