--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/appsettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+  "Data": {
+    "DefaultConnection": {
+      "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "LogConnStr": {
+      "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
