--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -18,7 +18,9 @@
     "Microsoft.AspNetCore.Cors": "1.0.0",
     "Newtonsoft.Json": "9.0.1",
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
-    "Angular2.Mvc.DAL": "1.0.0-*"
+    "System.Data.SqlClient": "4.3.0-preview1-24530-04",
+    "Angular2.Mvc.DAL": "1.0.0-*",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1"
   },
 
   "tools": {
