NLog works in web api.

--- a/Angular2.Mvc/src/Angular2.Mvc.Core/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Core/project.json
@@ -6,6 +6,10 @@
   },
 
   "frameworks": {
+    "net452": {
+      "dependencies": {
+      }
+    },
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
