--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/NLog.config
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/NLog.config
@@ -28,7 +28,7 @@
     <!--事件-->
     <!--<target name="Event" xsi:type="EventLog" source="${ProjectName}" log="Application" layout="${LayoutEvent}" />-->
     <!--即時顯示-->
-    <!--<target name="Sentinel" xsi:type="NLogViewer" address="udp://127.0.0.1:3333"/>-->
+    <target name="Sentinel" xsi:type="NLogViewer" address="udp://127.0.0.1:3333"/>
     <!--資料庫-->
     <target name="LogDatabase" xsi:type="Database" >
       <connectionString>
@@ -82,7 +82,7 @@
     <!--<logger name="*" levels="Trace, Debug, Info, Warn, Error, Fatal" writeTo="FmsDb,Viewer" />-->
     <logger name="*" levels="Trace, Debug, Info, Warn"               writeTo="File" />
     <logger name="*" levels="Error, Fatal"                           writeTo="FileFatal,LogDatabase" />
-    <!--<logger name="*" levels="Trace, Debug, Info, Warn, Error, Fatal" writeTo="Sentinel" />-->
+    <logger name="*" levels="Trace, Debug, Info, Warn, Error, Fatal" writeTo="Sentinel" />
     <!--<logger name="*" levels="Error, Fatal" writeTo="Event" />-->
   </rules>
 
