--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.0",
-      "type": "platform"
-    },
+    //"Microsoft.NETCore.App": {
+    //  "version": "1.0.0",
+    //  "type": "platform"
+    //},
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
@@ -19,8 +19,10 @@
     "Newtonsoft.Json": "9.0.1",
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4",
     "System.Data.SqlClient": "4.3.0-preview1-24530-04",
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
     "Angular2.Mvc.DAL": "1.0.0-*",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1"
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
+    "Microsoft.Extensions.Logging.Filter": "1.1.0-preview1-final"
   },
 
   "tools": {
@@ -28,11 +30,22 @@
   },
 
   "frameworks": {
+    "net452": {
+      "dependencies": {
+      }
+    },
     "netcoreapp1.0": {
       "imports": [
         "dotnet5.6",
+        "dnxcore50",
         "portable-net45+win8"
-      ]
+      ],
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "version": "1.0.0",
+          "type": "platform"
+        }
+      }
     }
   },
 
