--- a/Angular2.Mvc/src/Angular2.Mvc.Website/tsconfig.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/tsconfig.json
@@ -11,6 +11,14 @@
     "module": "system",
     "moduleResolution": "node"
   },
+  "typeRoots": [
+    "./node_modules/@types"
+  ],
+  "types": [
+    "firebase",
+    "angularfire2"
+  ],
+  "Run": null,
   //"files": [
   //  "./lib-npm/typings/es6-shim.d.ts",
   //  "./lib-npm/typings/jsnlog.d.ts",
