--- a/Angular2.Mvc/src/Angular2.Mvc.Core/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Core/project.json
@@ -1,17 +1,24 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    
   },
 
   "frameworks": {
     "net452": {
       "dependencies": {
+      },
+      "frameworkAssemblies": {
+        "System.ComponentModel.DataAnnotations": "4.0.0.0"
       }
     },
     "netstandard1.6": {
-      "imports": "dnxcore50"
+      "imports": "dnxcore50",
+      "dependencies": {
+        "System.ComponentModel.Annotations": "4.0.0"
+      }
     }
   }
 }
