--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -28,61 +28,63 @@
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "Angular2.Mvc.DAL": "1.0.0-*"
+    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final", //For scaffold tooling
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-final", //For scaffold tooling
+    "Angular2.Mvc.DAL": "1.0.0-*",
+    "Angular2.Mvc.Core": "1.0.0-*"
   },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final" //For scaffold tooling
   },
 
-  "frameworks": {
-    "net452": {
-      "dependencies": {
-        "Newtonsoft.Json": "9.0.1"
+    "frameworks": {
+      "net452": {
+        "dependencies": {
+          "Newtonsoft.Json": "9.0.1"
+        }
+      },
+      "netcoreapp1.0": {
+        "imports": [
+          "dotnet5.6",
+          "dnxcore50",
+          "portable-net45+win8"
+        ],
+        "dependencies": {
+          "Microsoft.NETCore.App": {
+            "version": "1.0.0",
+            "type": "platform"
+          },
+          "Newtonsoft.Json": "9.0.1"
+        }
       }
     },
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "dnxcore50",
-        "portable-net45+win8"
-      ],
-      "dependencies": {
-        "Angular2.Mvc.Core": "1.0.0-*",
-        "Microsoft.NETCore.App": {
-          "version": "1.0.0",
-          "type": "platform"
-        },
-        "Newtonsoft.Json": "9.0.1"
+
+    "buildOptions": {
+      "emitEntryPoint": true,
+      "preserveCompilationContext": true
+    },
+
+    "runtimeOptions": {
+      "configProperties": {
+        "System.GC.Server": true
       }
+    },
+
+    "publishOptions": {
+      "include": [
+        "wwwroot",
+        "Views",
+        "Areas/**/Views",
+        "appsettings.json",
+        "web.config",
+        "Nlog.config"
+      ]
+    },
+
+    "scripts": {
+      "prepublish": [ "bower install", "dotnet bundle" ],
+      "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
     }
-  },
-
-  "buildOptions": {
-    "emitEntryPoint": true,
-    "preserveCompilationContext": true
-  },
-
-  "runtimeOptions": {
-    "configProperties": {
-      "System.GC.Server": true
-    }
-  },
-
-  "publishOptions": {
-    "include": [
-      "wwwroot",
-      "Views",
-      "Areas/**/Views",
-      "appsettings.json",
-      "web.config",
-      "Nlog.config"
-    ]
-  },
-
-  "scripts": {
-    "prepublish": [ "bower install", "dotnet bundle" ],
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
-}
