--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -28,15 +28,13 @@
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final", //For scaffold tooling
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-final", //For scaffold tooling
     "Angular2.Mvc.DAL": "1.0.0-*",
-    "Angular2.Mvc.Core": "1.0.0-*"
+    "Angular2.Mvc.Core": "1.0.0-*",
+    "Angular2.Mvc.Service": "1.0.0-*"
   },
 
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
-    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final" //For scaffold tooling
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
   },
 
     "frameworks": {
