--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -15,6 +15,7 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+    "Microsoft.AspNetCore.Mvc.TagHelpers": "1.1.0-preview1-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
