--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -9,15 +9,16 @@
     "sweetalert2": "5.2.1"
   },
   "devDependencies": {
-    "systemjs": "0.19.39",
+    "@types/jquery": "^2.0.34",
     "es6-shim": "^0.33.3",
-    "rxjs": "5.0.0-rc.1",
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
     "rimraf": "2.2.8",
+    "rxjs": "5.0.0-rc.1",
     "sweetalert2": "5.2.1",
+    "systemjs": "0.19.39",
     "typescript": "2.0.3",
     "typings": "1.4.0"
   },
