--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -58,7 +58,8 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "xmlDoc": true
   },
 
   "runtimeOptions": {
