Complete the Swagger sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/appsettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/appsettings.json
@@ -6,5 +6,9 @@
     "LogConnStr": {
       "ConnectionString": "Server=.;Database=JB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
+  },
+  "Swagger": {
+    "XmlPath": "bin"
   }
+
 }
