--- a/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Webapi/project.json
@@ -23,8 +23,12 @@
     "Angular2.Mvc.DAL": "1.0.0-*",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.Extensions.Logging.Filter": "1.1.0-preview1-final",
+    "Swashbuckle.SwaggerGen": "6.0.0-beta902",
+    "Swashbuckle.SwaggerUi": "6.0.0-beta902",
     "Angular2.Mvc.Core": "1.0.0-*",
-    "Angular2.Mvc.Service": "1.0.0-*"
+    "Angular2.Mvc.Service": "1.0.0-*",
+    "Microsoft.AspNet.WebApi.Client": "5.2.3"
+    //"Microsoft.AspNetCore.Mvc.WebApiCompatShim": "1.0.0"
   },
 
   "tools": {
@@ -34,10 +38,6 @@
   "frameworks": {
     "net452": {
       "dependencies": {
-        "System.Net.Http": "4.0.0",
-        "Microsoft.AspNet.WebApi.Core": "5.2.3",
-        "Microsoft.AspNet.WebApi.Client": "5.2.3",
-        "Swashbuckle.Core": "5.2.3",
         "Microsoft.AspNet.Identity.Core": "2.2.1"
       }
     },
