--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -35,7 +35,8 @@
   },
 
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
   },
 
     "frameworks": {
