--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Properties/launchSettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Basic/CustomerMvc/Index",
+      "launchUrl": "Basic/Customer/Index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
