Install font-awesome and apply fa-spin icon to blockUI component.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "3.1.0",
     "angularfire2": "^2.0.0-beta.6",
     "firebase": "3.4.0",
+    "font-awesome": "^4.7.0",
     "jsnlog": "^2.20.1",
     "reflect-metadata": "^0.1.8",
     "traceur": "0.0.111",
