--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -67,7 +67,8 @@
 
     "buildOptions": {
       "emitEntryPoint": true,
-      "preserveCompilationContext": true
+      "preserveCompilationContext": true,
+        "compile": {"exclude": ["node_modules"]}
     },
 
     "runtimeOptions": {
