Complete the MsTest sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Properties/launchSettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Properties/launchSettings.json
@@ -9,7 +9,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",6
+      "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "Basic/CustomerVc/Index",
       "environmentVariables": {
