Create Option inject sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
@@ -6,6 +6,10 @@
     "LogConnStr": {
       "ConnectionString": "Server=.;Database=Demo;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
+  },
+  "Config": {
+    "SiteName": "ASP.NET Core X Angular2",
+    "SiteOwner":  "The FORCE Studio"
   }
 
 }
