--- a/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/appsettings.json
@@ -9,7 +9,7 @@
   },
   "Config": {
     "SiteName": "ASP.NET Core X Angular2",
-    "SiteOwner":  "The FORCE Studio"
+    "SiteOwner":  "2016-2017 JB"
   }
 
 }
