Update blockUI and import aspnet.spaService.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "3.1.0",
+    "angular2-universal": "^2.1.0-rc.1",
     "angularfire2": "^2.0.0-beta.6",
+    "aspnet-webpack": "^1.0.26",
     "firebase": "3.4.0",
     "font-awesome": "^4.7.0",
     "jsnlog": "^2.20.1",
