--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -35,7 +35,8 @@
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
-    "LinqKit.Microsoft.EntityFrameworkCore": "1.1.9"
+    "LinqKit.Microsoft.EntityFrameworkCore": "1.1.9",
+    "Microsoft.AspNetCore.SpaServices": "1.1.0-*"
   },
 
   "tools": {
