--- a/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/project.json
@@ -36,7 +36,8 @@
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
     "LinqKit.Microsoft.EntityFrameworkCore": "1.1.9",
-    "Microsoft.AspNetCore.SpaServices": "1.1.0-*"
+    "Microsoft.AspNetCore.SignalR.Server": "0.2.0-*",
+    "Microsoft.AspNetCore.WebSockets": "0.2.0-*"
   },
 
   "tools": {
