--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "3.1.0",
+    "@ngrx/effects": "^2.0.2",
     "angularfire2": "^2.0.0-beta.6",
     "firebase": "3.4.0",
     "font-awesome": "^4.7.0",
