--- a/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/package.json
@@ -15,6 +15,8 @@
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
+    "jasmine": "^2.6.0",
+    "karma-html2js-preprocessor": "^1.1.0",
     "rimraf": "2.2.8",
     "rxjs": "5.0.0-rc.1",
     "sweetalert2": "5.2.1",
@@ -35,7 +37,14 @@
     "angularfire2": "^2.0.0-beta.6",
     "firebase": "3.4.0",
     "font-awesome": "^4.7.0",
+    "jasmine-core": "^2.6.2",
     "jsnlog": "^2.20.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-fixture": "^0.2.6",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-inject-html": "0.0.1",
+    "karma-jasmine": "^1.1.0",
     "ng2-toastr": "^1.3.3",
     "reflect-metadata": "^0.1.8",
     "traceur": "0.0.111",
